bison.output
Nonterminals useless in grammar

    declaration
    init_declarator_list
    init_declarator
    statement
    labeled_statement
    compound_statement
    block_item_list
    block_item
    expression_statement
    selection_statement
    iteration_statement
    jump_statement
    translation_unit
    external_declaration
    function_definition
    declaration_list


Terminals unused in grammar

    NEWLINE
    ELSE
    DOUBLELITERAL
    HEXLITERAL
    HEXLITERALFLOAT
    CHARLITERAL
    INVALIDSUFFIX
    CASE
    IF
    SWITCH
    WHILE
    DO
    FOR
    GOTO
    CONTINUE
    BREAK
    RETURN


Rules useless in grammar

  229 declaration: declaration_specifiers SEMICOLON
  230            | declaration_specifiers init_declarator_list SEMICOLON
  231            | static_assert_declaration

  232 init_declarator_list: init_declarator
  233                     | init_declarator_list COMMA init_declarator

  234 init_declarator: declarator EQU initializer
  235                | declarator

  236 statement: labeled_statement
  237          | compound_statement
  238          | expression_statement
  239          | selection_statement
  240          | iteration_statement
  241          | jump_statement

  242 labeled_statement: ID COLON statement
  243                  | CASE constant_expression COLON statement
  244                  | DEFAULT COLON statement

  245 compound_statement: LBRACKET RBRACKET
  246                   | LBRACKET block_item_list RBRACKET

  247 block_item_list: block_item
  248                | block_item_list block_item

  249 block_item: declaration
  250           | statement

  251 expression_statement: SEMICOLON
  252                     | expression SEMICOLON

  253 selection_statement: IF LPAREN expression RPAREN statement ELSE statement
  254                    | IF LPAREN expression RPAREN statement
  255                    | SWITCH LPAREN expression RPAREN statement

  256 iteration_statement: WHILE LPAREN expression RPAREN statement
  257                    | DO statement WHILE LPAREN expression RPAREN SEMICOLON
  258                    | FOR LPAREN expression_statement expression_statement RPAREN statement
  259                    | FOR LPAREN expression_statement expression_statement expression RPAREN statement
  260                    | FOR LPAREN declaration expression_statement RPAREN statement
  261                    | FOR LPAREN declaration expression_statement expression RPAREN statement

  262 jump_statement: GOTO ID SEMICOLON
  263               | CONTINUE SEMICOLON
  264               | BREAK SEMICOLON
  265               | RETURN SEMICOLON
  266               | RETURN expression SEMICOLON

  267 translation_unit: external_declaration
  268                 | translation_unit external_declaration

  269 external_declaration: function_definition
  270                     | declaration

  271 function_definition: declaration_specifiers declarator declaration_list compound_statement
  272                    | declaration_specifiers declarator compound_statement

  273 declaration_list: declaration
  274                 | declaration_list declaration


State 3 conflicts: 43 reduce/reduce
State 63 conflicts: 1 shift/reduce


Grammar

    0 $accept: primary_expression $end

    1 primary_expression: ID
    2                   | constant
    3                   | string
    4                   | LPAREN expression RPAREN
    5                   | generic_selection

    6 constant: INTLITERAL
    7         | FLOATLITERAL
    8         | enumeration_constant

    9 enumeration_constant: ID

   10 string: STRINGLITERAL
   11       | FUNC_NAME

   12 generic_selection: GENERIC LPAREN assignment_expression COMMA generic_assoc_list RPAREN

   13 generic_assoc_list: generic_association
   14                   | generic_assoc_list COMMA generic_association

   15 generic_association: type_name COLON assignment_expression
   16                    | DEFAULT assignment_expression

   17 postfix_expression: primary_expression
   18                   | postfix_expression LSQBRACKET expression RSQBRACKET
   19                   | postfix_expression LPAREN RPAREN
   20                   | postfix_expression LPAREN argument_expression_list RPAREN
   21                   | postfix_expression POINT ID
   22                   | postfix_expression PTR_OP ID
   23                   | postfix_expression INC_OP
   24                   | postfix_expression DEC_OP
   25                   | LPAREN type_name RPAREN LBRACKET initializer_list RBRACKET
   26                   | LPAREN type_name RPAREN LBRACKET initializer_list COMMA RBRACKET

   27 argument_expression_list: assignment_expression
   28                         | argument_expression_list COMMA assignment_expression

   29 unary_expression: postfix_expression
   30                 | INC_OP unary_expression
   31                 | DEC_OP unary_expression
   32                 | unary_operator cast_expression
   33                 | SIZEOF unary_expression
   34                 | SIZEOF LPAREN type_name RPAREN
   35                 | ALIGNOF LPAREN type_name RPAREN

   36 unary_operator: AND
   37               | MUL
   38               | ADD
   39               | SUB
   40               | TILDE
   41               | NOT

   42 cast_expression: unary_expression
   43                | LPAREN type_name RPAREN cast_expression

   44 multiplicative_expression: cast_expression
   45                          | multiplicative_expression MUL cast_expression
   46                          | multiplicative_expression DIV cast_expression
   47                          | multiplicative_expression MOD cast_expression

   48 additive_expression: multiplicative_expression
   49                    | additive_expression ADD multiplicative_expression
   50                    | additive_expression SUB multiplicative_expression

   51 shift_expression: additive_expression
   52                 | shift_expression LEFT_OP additive_expression
   53                 | shift_expression RIGHT_OP additive_expression

   54 relational_expression: shift_expression
   55                      | relational_expression L_THAN shift_expression
   56                      | relational_expression G_THAN shift_expression
   57                      | relational_expression LE_OP shift_expression
   58                      | relational_expression GE_OP shift_expression

   59 equality_expression: relational_expression
   60                    | equality_expression EQ_OP relational_expression
   61                    | equality_expression NE_OP relational_expression

   62 and_expression: equality_expression
   63               | and_expression AND equality_expression

   64 exclusive_or_expression: and_expression
   65                        | exclusive_or_expression XOR and_expression

   66 inclusive_or_expression: exclusive_or_expression
   67                        | inclusive_or_expression OR exclusive_or_expression

   68 logical_and_expression: inclusive_or_expression
   69                       | logical_and_expression AND_OP inclusive_or_expression

   70 logical_or_expression: logical_and_expression
   71                      | logical_or_expression OR_OP logical_and_expression

   72 conditional_expression: logical_or_expression
   73                       | logical_or_expression QUESTION expression COLON conditional_expression

   74 assignment_expression: conditional_expression
   75                      | unary_expression assignment_operator assignment_expression

   76 assignment_operator: EQU
   77                    | MUL_ASSIGN
   78                    | DIV_ASSIGN
   79                    | MOD_ASSIGN
   80                    | ADD_ASSIGN
   81                    | SUB_ASSIGN
   82                    | LEFT_ASSIGN
   83                    | RIGHT_ASSIGN
   84                    | AND_ASSIGN
   85                    | XOR_ASSIGN
   86                    | OR_ASSIGN

   87 expression: assignment_expression
   88           | expression COMMA assignment_expression

   89 constant_expression: conditional_expression

   90 declaration_specifiers: storage_class_specifier declaration_specifiers
   91                       | storage_class_specifier
   92                       | type_specifier declaration_specifiers
   93                       | type_specifier
   94                       | type_qualifier declaration_specifiers
   95                       | type_qualifier
   96                       | function_specifier declaration_specifiers
   97                       | function_specifier
   98                       | alignment_specifier declaration_specifiers
   99                       | alignment_specifier

  100 storage_class_specifier: TYPEDEF
  101                        | EXTERN
  102                        | STATIC
  103                        | THREAD_LOCAL
  104                        | AUTO
  105                        | REGISTER

  106 type_specifier: VOID
  107               | CHAR
  108               | SHORT
  109               | INT
  110               | LONG
  111               | FLOAT
  112               | DOUBLE
  113               | SIGNED
  114               | UNSIGNED
  115               | BOOL
  116               | COMPLEX
  117               | IMAGINARY
  118               | atomic_type_specifier
  119               | struct_or_union_specifier
  120               | enum_specifier
  121               | TYPEDEF_NAME

  122 struct_or_union_specifier: struct_or_union LBRACKET struct_declaration_list RBRACKET
  123                          | struct_or_union ID LBRACKET struct_declaration_list RBRACKET
  124                          | struct_or_union ID

  125 struct_or_union: STRUCT
  126                | UNION

  127 struct_declaration_list: struct_declaration
  128                        | struct_declaration_list struct_declaration

  129 struct_declaration: specifier_qualifier_list SEMICOLON
  130                   | specifier_qualifier_list struct_declarator_list SEMICOLON
  131                   | static_assert_declaration

  132 specifier_qualifier_list: type_specifier specifier_qualifier_list
  133                         | type_specifier
  134                         | type_qualifier specifier_qualifier_list
  135                         | type_qualifier

  136 struct_declarator_list: struct_declarator
  137                       | struct_declarator_list COMMA struct_declarator

  138 struct_declarator: COLON constant_expression
  139                  | declarator COLON constant_expression
  140                  | declarator

  141 enum_specifier: ENUM LBRACKET enumerator_list RBRACKET
  142               | ENUM LBRACKET enumerator_list COMMA RBRACKET
  143               | ENUM ID LBRACKET enumerator_list RBRACKET
  144               | ENUM ID LBRACKET enumerator_list COMMA RBRACKET
  145               | ENUM ID

  146 enumerator_list: enumerator
  147                | enumerator_list COMMA enumerator

  148 enumerator: enumeration_constant EQU constant_expression
  149           | enumeration_constant

  150 atomic_type_specifier: ATOMIC LPAREN type_name RPAREN

  151 type_qualifier: CONST
  152               | RESTRICT
  153               | VOLATILE
  154               | ATOMIC

  155 function_specifier: INLINE
  156                   | NORETURN

  157 alignment_specifier: ALIGNAS LPAREN type_name RPAREN
  158                    | ALIGNAS LPAREN constant_expression RPAREN

  159 declarator: pointer direct_declarator
  160           | direct_declarator

  161 direct_declarator: ID
  162                  | LPAREN declarator RPAREN
  163                  | direct_declarator LSQBRACKET RSQBRACKET
  164                  | direct_declarator LSQBRACKET MUL RSQBRACKET
  165                  | direct_declarator LSQBRACKET STATIC type_qualifier_list assignment_expression RSQBRACKET
  166                  | direct_declarator LSQBRACKET STATIC assignment_expression RSQBRACKET
  167                  | direct_declarator LSQBRACKET type_qualifier_list MUL RSQBRACKET
  168                  | direct_declarator LSQBRACKET type_qualifier_list STATIC assignment_expression RSQBRACKET
  169                  | direct_declarator LSQBRACKET type_qualifier_list assignment_expression RSQBRACKET
  170                  | direct_declarator LSQBRACKET type_qualifier_list RSQBRACKET
  171                  | direct_declarator LSQBRACKET assignment_expression RSQBRACKET
  172                  | direct_declarator LPAREN parameter_type_list RPAREN
  173                  | direct_declarator LPAREN RPAREN
  174                  | direct_declarator LPAREN identifier_list RPAREN

  175 pointer: MUL type_qualifier_list pointer
  176        | MUL type_qualifier_list
  177        | MUL pointer
  178        | MUL

  179 type_qualifier_list: type_qualifier
  180                    | type_qualifier_list type_qualifier

  181 parameter_type_list: parameter_list COMMA ELLIPSIS
  182                    | parameter_list

  183 parameter_list: parameter_declaration
  184               | parameter_list COMMA parameter_declaration

  185 parameter_declaration: declaration_specifiers declarator
  186                      | declaration_specifiers abstract_declarator
  187                      | declaration_specifiers

  188 identifier_list: ID
  189                | identifier_list COMMA ID

  190 type_name: specifier_qualifier_list abstract_declarator
  191          | specifier_qualifier_list

  192 abstract_declarator: pointer direct_abstract_declarator
  193                    | pointer
  194                    | direct_abstract_declarator

  195 direct_abstract_declarator: LPAREN abstract_declarator RPAREN
  196                           | LSQBRACKET RSQBRACKET
  197                           | LSQBRACKET MUL RSQBRACKET
  198                           | LSQBRACKET STATIC type_qualifier_list assignment_expression RSQBRACKET
  199                           | LSQBRACKET STATIC assignment_expression RSQBRACKET
  200                           | LSQBRACKET type_qualifier_list STATIC assignment_expression RSQBRACKET
  201                           | LSQBRACKET type_qualifier_list assignment_expression RSQBRACKET
  202                           | LSQBRACKET type_qualifier_list RSQBRACKET
  203                           | LSQBRACKET assignment_expression RSQBRACKET
  204                           | direct_abstract_declarator LSQBRACKET RSQBRACKET
  205                           | direct_abstract_declarator LSQBRACKET MUL RSQBRACKET
  206                           | direct_abstract_declarator LSQBRACKET STATIC type_qualifier_list assignment_expression RSQBRACKET
  207                           | direct_abstract_declarator LSQBRACKET STATIC assignment_expression RSQBRACKET
  208                           | direct_abstract_declarator LSQBRACKET type_qualifier_list assignment_expression RSQBRACKET
  209                           | direct_abstract_declarator LSQBRACKET type_qualifier_list STATIC assignment_expression RSQBRACKET
  210                           | direct_abstract_declarator LSQBRACKET type_qualifier_list RSQBRACKET
  211                           | direct_abstract_declarator LSQBRACKET assignment_expression RSQBRACKET
  212                           | LPAREN RPAREN
  213                           | LPAREN parameter_type_list RPAREN
  214                           | direct_abstract_declarator LPAREN RPAREN
  215                           | direct_abstract_declarator LPAREN parameter_type_list RPAREN

  216 initializer: LBRACKET initializer_list RBRACKET
  217            | LBRACKET initializer_list COMMA RBRACKET
  218            | assignment_expression

  219 initializer_list: designation initializer
  220                 | initializer
  221                 | initializer_list COMMA designation initializer
  222                 | initializer_list COMMA initializer

  223 designation: designator_list EQU

  224 designator_list: designator
  225                | designator_list designator

  226 designator: LSQBRACKET constant_expression RSQBRACKET
  227           | POINT ID

  228 static_assert_declaration: STATIC_ASSERT LPAREN constant_expression COMMA STRINGLITERAL RPAREN SEMICOLON


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    LPAREN (258) 4 12 19 20 25 26 34 35 43 150 157 158 162 172 173 174 195 212 213 214 215 228
    RPAREN (259) 4 12 19 20 25 26 34 35 43 150 157 158 162 172 173 174 195 212 213 214 215 228
    LSQBRACKET (260) 18 163 164 165 166 167 168 169 170 171 196 197 198 199 200 201 202 203 204 205 206 207 208 209 210 211 226
    RSQBRACKET (261) 18 163 164 165 166 167 168 169 170 171 196 197 198 199 200 201 202 203 204 205 206 207 208 209 210 211 226
    LBRACKET (262) 25 26 122 123 141 142 143 144 216 217
    RBRACKET (263) 25 26 122 123 141 142 143 144 216 217
    SEMICOLON (264) 129 130 228
    COMMA (265) 12 14 26 28 88 137 142 144 147 181 184 189 217 221 222 228
    NEWLINE (266)
    COLON (267) 15 73 138 139
    POINT (268) 21 227
    ALIGNAS (269) 157 158
    ALIGNOF (270) 35
    ELLIPSIS (271) 181
    ELSE (272)
    EQU (273) 76 148 223
    GENERIC (274) 12
    INLINE (275) 155
    ID <idvalue> (276) 1 9 21 22 123 124 143 144 145 161 188 189 227
    INTLITERAL <intvalue> (277) 6
    FLOATLITERAL <floatvalue> (278) 7
    DOUBLELITERAL <doublevalue> (279)
    HEXLITERAL <hexvalue> (280)
    HEXLITERALFLOAT <hexfloatvalue> (281)
    CHARLITERAL <charvalue> (282)
    STRINGLITERAL <stringvalue> (283) 10 228
    INVALIDSUFFIX (284)
    AND (285) 36 63
    MUL (286) 37 45 164 167 175 176 177 178 197 205
    ADD (287) 38 49
    SUB (288) 39 50
    TILDE (289) 40
    NOT (290) 41
    DIV (291) 46
    MOD (292) 47
    L_THAN (293) 55
    G_THAN (294) 56
    XOR (295) 65
    OR (296) 67
    QUESTION (297) 73
    SIZEOF (298) 33 34
    INC_OP (299) 23 30
    DEC_OP (300) 24 31
    PTR_OP (301) 22
    DEFAULT (302) 16
    LEFT_OP (303) 52
    RIGHT_OP (304) 53
    LE_OP (305) 57
    GE_OP (306) 58
    EQ_OP (307) 60
    NE_OP (308) 61
    AND_OP (309) 69
    OR_OP (310) 71
    MUL_ASSIGN (311) 77
    DIV_ASSIGN (312) 78
    MOD_ASSIGN (313) 79
    ADD_ASSIGN (314) 80
    SUB_ASSIGN (315) 81
    LEFT_ASSIGN (316) 82
    RIGHT_ASSIGN (317) 83
    AND_ASSIGN (318) 84
    XOR_ASSIGN (319) 85
    OR_ASSIGN (320) 86
    TYPEDEF (321) 100
    EXTERN (322) 101
    STATIC (323) 102 165 166 168 198 199 200 206 207 209
    THREAD_LOCAL (324) 103
    AUTO (325) 104
    REGISTER (326) 105
    NORETURN (327) 156
    STATIC_ASSERT (328) 228
    FUNC_NAME (329) 11
    VOID (330) 106
    CHAR (331) 107
    SHORT (332) 108
    INT (333) 109
    LONG (334) 110
    FLOAT (335) 111
    DOUBLE (336) 112
    SIGNED (337) 113
    UNSIGNED (338) 114
    BOOL (339) 115
    COMPLEX (340) 116
    IMAGINARY (341) 117
    TYPEDEF_NAME (342) 121
    STRUCT (343) 125
    UNION (344) 126
    ENUM (345) 141 142 143 144 145
    CONST (346) 151
    RESTRICT (347) 152
    VOLATILE (348) 153
    ATOMIC (349) 150 154
    CASE (350)
    IF (351)
    SWITCH (352)
    WHILE (353)
    DO (354)
    FOR (355)
    GOTO (356)
    CONTINUE (357)
    BREAK (358)
    RETURN (359)


Nonterminals, with rules where they appear

    $accept (105)
        on left: 0
    primary_expression (106)
        on left: 1 2 3 4 5
        on right: 0 17
    constant (107)
        on left: 6 7 8
        on right: 2
    enumeration_constant (108)
        on left: 9
        on right: 8 148 149
    string (109)
        on left: 10 11
        on right: 3
    generic_selection (110)
        on left: 12
        on right: 5
    generic_assoc_list (111)
        on left: 13 14
        on right: 12 14
    generic_association (112)
        on left: 15 16
        on right: 13 14
    postfix_expression (113)
        on left: 17 18 19 20 21 22 23 24 25 26
        on right: 18 19 20 21 22 23 24 29
    argument_expression_list (114)
        on left: 27 28
        on right: 20 28
    unary_expression (115)
        on left: 29 30 31 32 33 34 35
        on right: 30 31 33 42 75
    unary_operator (116)
        on left: 36 37 38 39 40 41
        on right: 32
    cast_expression (117)
        on left: 42 43
        on right: 32 43 44 45 46 47
    multiplicative_expression (118)
        on left: 44 45 46 47
        on right: 45 46 47 48 49 50
    additive_expression (119)
        on left: 48 49 50
        on right: 49 50 51 52 53
    shift_expression (120)
        on left: 51 52 53
        on right: 52 53 54 55 56 57 58
    relational_expression (121)
        on left: 54 55 56 57 58
        on right: 55 56 57 58 59 60 61
    equality_expression (122)
        on left: 59 60 61
        on right: 60 61 62 63
    and_expression (123)
        on left: 62 63
        on right: 63 64 65
    exclusive_or_expression (124)
        on left: 64 65
        on right: 65 66 67
    inclusive_or_expression (125)
        on left: 66 67
        on right: 67 68 69
    logical_and_expression (126)
        on left: 68 69
        on right: 69 70 71
    logical_or_expression (127)
        on left: 70 71
        on right: 71 72 73
    conditional_expression (128)
        on left: 72 73
        on right: 73 74 89
    assignment_expression (129)
        on left: 74 75
        on right: 12 15 16 27 28 75 87 88 165 166 168 169 171 198 199 200 201 203 206 207 208 209 211 218
    assignment_operator (130)
        on left: 76 77 78 79 80 81 82 83 84 85 86
        on right: 75
    expression (131)
        on left: 87 88
        on right: 4 18 73 88
    constant_expression (132)
        on left: 89
        on right: 138 139 148 158 226 228
    declaration_specifiers (133)
        on left: 90 91 92 93 94 95 96 97 98 99
        on right: 90 92 94 96 98 185 186 187
    storage_class_specifier (134)
        on left: 100 101 102 103 104 105
        on right: 90 91
    type_specifier (135)
        on left: 106 107 108 109 110 111 112 113 114 115 116 117 118 119 120 121
        on right: 92 93 132 133
    struct_or_union_specifier (136)
        on left: 122 123 124
        on right: 119
    struct_or_union (137)
        on left: 125 126
        on right: 122 123 124
    struct_declaration_list (138)
        on left: 127 128
        on right: 122 123 128
    struct_declaration (139)
        on left: 129 130 131
        on right: 127 128
    specifier_qualifier_list (140)
        on left: 132 133 134 135
        on right: 129 130 132 134 190 191
    struct_declarator_list (141)
        on left: 136 137
        on right: 130 137
    struct_declarator (142)
        on left: 138 139 140
        on right: 136 137
    enum_specifier (143)
        on left: 141 142 143 144 145
        on right: 120
    enumerator_list (144)
        on left: 146 147
        on right: 141 142 143 144 147
    enumerator (145)
        on left: 148 149
        on right: 146 147
    atomic_type_specifier (146)
        on left: 150
        on right: 118
    type_qualifier (147)
        on left: 151 152 153 154
        on right: 94 95 134 135 179 180
    function_specifier (148)
        on left: 155 156
        on right: 96 97
    alignment_specifier (149)
        on left: 157 158
        on right: 98 99
    declarator (150)
        on left: 159 160
        on right: 139 140 162 185
    direct_declarator (151)
        on left: 161 162 163 164 165 166 167 168 169 170 171 172 173 174
        on right: 159 160 163 164 165 166 167 168 169 170 171 172 173 174
    pointer (152)
        on left: 175 176 177 178
        on right: 159 175 177 192 193
    type_qualifier_list (153)
        on left: 179 180
        on right: 165 167 168 169 170 175 176 180 198 200 201 202 206 208 209 210
    parameter_type_list (154)
        on left: 181 182
        on right: 172 213 215
    parameter_list (155)
        on left: 183 184
        on right: 181 182 184
    parameter_declaration (156)
        on left: 185 186 187
        on right: 183 184
    identifier_list (157)
        on left: 188 189
        on right: 174 189
    type_name (158)
        on left: 190 191
        on right: 15 25 26 34 35 43 150 157
    abstract_declarator (159)
        on left: 192 193 194
        on right: 186 190 195
    direct_abstract_declarator (160)
        on left: 195 196 197 198 199 200 201 202 203 204 205 206 207 208 209 210 211 212 213 214 215
        on right: 192 194 204 205 206 207 208 209 210 211 214 215
    initializer (161)
        on left: 216 217 218
        on right: 219 220 221 222
    initializer_list (162)
        on left: 219 220 221 222
        on right: 25 26 216 217 221 222
    designation (163)
        on left: 223
        on right: 219 221
    designator_list (164)
        on left: 224 225
        on right: 223 225
    designator (165)
        on left: 226 227
        on right: 224 225
    static_assert_declaration (166)
        on left: 228
        on right: 131


State 0

    0 $accept: . primary_expression $end

    LPAREN         shift, and go to state 1
    GENERIC        shift, and go to state 2
    ID             shift, and go to state 3
    INTLITERAL     shift, and go to state 4
    FLOATLITERAL   shift, and go to state 5
    STRINGLITERAL  shift, and go to state 6
    FUNC_NAME      shift, and go to state 7

    primary_expression    go to state 8
    constant              go to state 9
    enumeration_constant  go to state 10
    string                go to state 11
    generic_selection     go to state 12


State 1

    4 primary_expression: LPAREN . expression RPAREN

    LPAREN         shift, and go to state 13
    ALIGNOF        shift, and go to state 14
    GENERIC        shift, and go to state 2
    ID             shift, and go to state 3
    INTLITERAL     shift, and go to state 4
    FLOATLITERAL   shift, and go to state 5
    STRINGLITERAL  shift, and go to state 6
    AND            shift, and go to state 15
    MUL            shift, and go to state 16
    ADD            shift, and go to state 17
    SUB            shift, and go to state 18
    TILDE          shift, and go to state 19
    NOT            shift, and go to state 20
    SIZEOF         shift, and go to state 21
    INC_OP         shift, and go to state 22
    DEC_OP         shift, and go to state 23
    FUNC_NAME      shift, and go to state 7

    primary_expression         go to state 24
    constant                   go to state 9
    enumeration_constant       go to state 10
    string                     go to state 11
    generic_selection          go to state 12
    postfix_expression         go to state 25
    unary_expression           go to state 26
    unary_operator             go to state 27
    cast_expression            go to state 28
    multiplicative_expression  go to state 29
    additive_expression        go to state 30
    shift_expression           go to state 31
    relational_expression      go to state 32
    equality_expression        go to state 33
    and_expression             go to state 34
    exclusive_or_expression    go to state 35
    inclusive_or_expression    go to state 36
    logical_and_expression     go to state 37
    logical_or_expression      go to state 38
    conditional_expression     go to state 39
    assignment_expression      go to state 40
    expression                 go to state 41


State 2

   12 generic_selection: GENERIC . LPAREN assignment_expression COMMA generic_assoc_list RPAREN

    LPAREN  shift, and go to state 42


State 3

    1 primary_expression: ID .
    9 enumeration_constant: ID .

    $end          reduce using rule 1 (primary_expression)
    $end          [reduce using rule 9 (enumeration_constant)]
    LPAREN        reduce using rule 1 (primary_expression)
    LPAREN        [reduce using rule 9 (enumeration_constant)]
    RPAREN        reduce using rule 1 (primary_expression)
    RPAREN        [reduce using rule 9 (enumeration_constant)]
    LSQBRACKET    reduce using rule 1 (primary_expression)
    LSQBRACKET    [reduce using rule 9 (enumeration_constant)]
    RSQBRACKET    reduce using rule 1 (primary_expression)
    RSQBRACKET    [reduce using rule 9 (enumeration_constant)]
    RBRACKET      reduce using rule 1 (primary_expression)
    RBRACKET      [reduce using rule 9 (enumeration_constant)]
    SEMICOLON     reduce using rule 1 (primary_expression)
    SEMICOLON     [reduce using rule 9 (enumeration_constant)]
    COMMA         reduce using rule 1 (primary_expression)
    COMMA         [reduce using rule 9 (enumeration_constant)]
    COLON         reduce using rule 1 (primary_expression)
    COLON         [reduce using rule 9 (enumeration_constant)]
    POINT         reduce using rule 1 (primary_expression)
    POINT         [reduce using rule 9 (enumeration_constant)]
    EQU           reduce using rule 1 (primary_expression)
    EQU           [reduce using rule 9 (enumeration_constant)]
    AND           reduce using rule 1 (primary_expression)
    AND           [reduce using rule 9 (enumeration_constant)]
    MUL           reduce using rule 1 (primary_expression)
    MUL           [reduce using rule 9 (enumeration_constant)]
    ADD           reduce using rule 1 (primary_expression)
    ADD           [reduce using rule 9 (enumeration_constant)]
    SUB           reduce using rule 1 (primary_expression)
    SUB           [reduce using rule 9 (enumeration_constant)]
    DIV           reduce using rule 1 (primary_expression)
    DIV           [reduce using rule 9 (enumeration_constant)]
    MOD           reduce using rule 1 (primary_expression)
    MOD           [reduce using rule 9 (enumeration_constant)]
    L_THAN        reduce using rule 1 (primary_expression)
    L_THAN        [reduce using rule 9 (enumeration_constant)]
    G_THAN        reduce using rule 1 (primary_expression)
    G_THAN        [reduce using rule 9 (enumeration_constant)]
    XOR           reduce using rule 1 (primary_expression)
    XOR           [reduce using rule 9 (enumeration_constant)]
    OR            reduce using rule 1 (primary_expression)
    OR            [reduce using rule 9 (enumeration_constant)]
    QUESTION      reduce using rule 1 (primary_expression)
    QUESTION      [reduce using rule 9 (enumeration_constant)]
    INC_OP        reduce using rule 1 (primary_expression)
    INC_OP        [reduce using rule 9 (enumeration_constant)]
    DEC_OP        reduce using rule 1 (primary_expression)
    DEC_OP        [reduce using rule 9 (enumeration_constant)]
    PTR_OP        reduce using rule 1 (primary_expression)
    PTR_OP        [reduce using rule 9 (enumeration_constant)]
    LEFT_OP       reduce using rule 1 (primary_expression)
    LEFT_OP       [reduce using rule 9 (enumeration_constant)]
    RIGHT_OP      reduce using rule 1 (primary_expression)
    RIGHT_OP      [reduce using rule 9 (enumeration_constant)]
    LE_OP         reduce using rule 1 (primary_expression)
    LE_OP         [reduce using rule 9 (enumeration_constant)]
    GE_OP         reduce using rule 1 (primary_expression)
    GE_OP         [reduce using rule 9 (enumeration_constant)]
    EQ_OP         reduce using rule 1 (primary_expression)
    EQ_OP         [reduce using rule 9 (enumeration_constant)]
    NE_OP         reduce using rule 1 (primary_expression)
    NE_OP         [reduce using rule 9 (enumeration_constant)]
    AND_OP        reduce using rule 1 (primary_expression)
    AND_OP        [reduce using rule 9 (enumeration_constant)]
    OR_OP         reduce using rule 1 (primary_expression)
    OR_OP         [reduce using rule 9 (enumeration_constant)]
    MUL_ASSIGN    reduce using rule 1 (primary_expression)
    MUL_ASSIGN    [reduce using rule 9 (enumeration_constant)]
    DIV_ASSIGN    reduce using rule 1 (primary_expression)
    DIV_ASSIGN    [reduce using rule 9 (enumeration_constant)]
    MOD_ASSIGN    reduce using rule 1 (primary_expression)
    MOD_ASSIGN    [reduce using rule 9 (enumeration_constant)]
    ADD_ASSIGN    reduce using rule 1 (primary_expression)
    ADD_ASSIGN    [reduce using rule 9 (enumeration_constant)]
    SUB_ASSIGN    reduce using rule 1 (primary_expression)
    SUB_ASSIGN    [reduce using rule 9 (enumeration_constant)]
    LEFT_ASSIGN   reduce using rule 1 (primary_expression)
    LEFT_ASSIGN   [reduce using rule 9 (enumeration_constant)]
    RIGHT_ASSIGN  reduce using rule 1 (primary_expression)
    RIGHT_ASSIGN  [reduce using rule 9 (enumeration_constant)]
    AND_ASSIGN    reduce using rule 1 (primary_expression)
    AND_ASSIGN    [reduce using rule 9 (enumeration_constant)]
    XOR_ASSIGN    reduce using rule 1 (primary_expression)
    XOR_ASSIGN    [reduce using rule 9 (enumeration_constant)]
    OR_ASSIGN     reduce using rule 1 (primary_expression)
    OR_ASSIGN     [reduce using rule 9 (enumeration_constant)]
    $default      reduce using rule 1 (primary_expression)


State 4

    6 constant: INTLITERAL .

    $default  reduce using rule 6 (constant)


State 5

    7 constant: FLOATLITERAL .

    $default  reduce using rule 7 (constant)


State 6

   10 string: STRINGLITERAL .

    $default  reduce using rule 10 (string)


State 7

   11 string: FUNC_NAME .

    $default  reduce using rule 11 (string)


State 8

    0 $accept: primary_expression . $end

    $end  shift, and go to state 43


State 9

    2 primary_expression: constant .

    $default  reduce using rule 2 (primary_expression)


State 10

    8 constant: enumeration_constant .

    $default  reduce using rule 8 (constant)


State 11

    3 primary_expression: string .

    $default  reduce using rule 3 (primary_expression)


State 12

    5 primary_expression: generic_selection .

    $default  reduce using rule 5 (primary_expression)


State 13

    4 primary_expression: LPAREN . expression RPAREN
   25 postfix_expression: LPAREN . type_name RPAREN LBRACKET initializer_list RBRACKET
   26                   | LPAREN . type_name RPAREN LBRACKET initializer_list COMMA RBRACKET
   43 cast_expression: LPAREN . type_name RPAREN cast_expression

    LPAREN         shift, and go to state 13
    ALIGNOF        shift, and go to state 14
    GENERIC        shift, and go to state 2
    ID             shift, and go to state 3
    INTLITERAL     shift, and go to state 4
    FLOATLITERAL   shift, and go to state 5
    STRINGLITERAL  shift, and go to state 6
    AND            shift, and go to state 15
    MUL            shift, and go to state 16
    ADD            shift, and go to state 17
    SUB            shift, and go to state 18
    TILDE          shift, and go to state 19
    NOT            shift, and go to state 20
    SIZEOF         shift, and go to state 21
    INC_OP         shift, and go to state 22
    DEC_OP         shift, and go to state 23
    FUNC_NAME      shift, and go to state 7
    VOID           shift, and go to state 44
    CHAR           shift, and go to state 45
    SHORT          shift, and go to state 46
    INT            shift, and go to state 47
    LONG           shift, and go to state 48
    FLOAT          shift, and go to state 49
    DOUBLE         shift, and go to state 50
    SIGNED         shift, and go to state 51
    UNSIGNED       shift, and go to state 52
    BOOL           shift, and go to state 53
    COMPLEX        shift, and go to state 54
    IMAGINARY      shift, and go to state 55
    TYPEDEF_NAME   shift, and go to state 56
    STRUCT         shift, and go to state 57
    UNION          shift, and go to state 58
    ENUM           shift, and go to state 59
    CONST          shift, and go to state 60
    RESTRICT       shift, and go to state 61
    VOLATILE       shift, and go to state 62
    ATOMIC         shift, and go to state 63

    primary_expression         go to state 24
    constant                   go to state 9
    enumeration_constant       go to state 10
    string                     go to state 11
    generic_selection          go to state 12
    postfix_expression         go to state 25
    unary_expression           go to state 26
    unary_operator             go to state 27
    cast_expression            go to state 28
    multiplicative_expression  go to state 29
    additive_expression        go to state 30
    shift_expression           go to state 31
    relational_expression      go to state 32
    equality_expression        go to state 33
    and_expression             go to state 34
    exclusive_or_expression    go to state 35
    inclusive_or_expression    go to state 36
    logical_and_expression     go to state 37
    logical_or_expression      go to state 38
    conditional_expression     go to state 39
    assignment_expression      go to state 40
    expression                 go to state 41
    type_specifier             go to state 64
    struct_or_union_specifier  go to state 65
    struct_or_union            go to state 66
    specifier_qualifier_list   go to state 67
    enum_specifier             go to state 68
    atomic_type_specifier      go to state 69
    type_qualifier             go to state 70
    type_name                  go to state 71


State 14

   35 unary_expression: ALIGNOF . LPAREN type_name RPAREN

    LPAREN  shift, and go to state 72


State 15

   36 unary_operator: AND .

    $default  reduce using rule 36 (unary_operator)


State 16

   37 unary_operator: MUL .

    $default  reduce using rule 37 (unary_operator)


State 17

   38 unary_operator: ADD .

    $default  reduce using rule 38 (unary_operator)


State 18

   39 unary_operator: SUB .

    $default  reduce using rule 39 (unary_operator)


State 19

   40 unary_operator: TILDE .

    $default  reduce using rule 40 (unary_operator)


State 20

   41 unary_operator: NOT .

    $default  reduce using rule 41 (unary_operator)


State 21
